--- a/l1t3.ipynb
+++ b/l1t3.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "d5c94a80-e319-4883-8517-72ac8fb0ea32",
    "metadata": {},
    "outputs": [
@@ -28,6 +28,8 @@
     }
    ],
    "source": [
+    "\n",
+    "\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "np.random.seed(42)\n",
@@ -60,12 +62,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7620eb72-319d-4ab9-868b-b0c460c62467",
+   "cell_type": "markdown",
+   "id": "0fd94225",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "ERROR METRICS VISUALIZATIONS\n"
+   ]
   }
  ],
  "metadata": {
